components/spire/kustomize/spire-server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-server
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: spire-server
