components/spire/kustomize/spire-server/server-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spire-server-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - spire.dev.fl.katulu.io
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
